# imon-rs

./: .gitignore  Cargo.toml  justfile
cli/: Cargo.toml
cli/src/: main.rs  util.rs
derive/: Cargo.toml
derive/src/: lib.rs  macros.rs
derive/tests/: 01-parse.rs
impl/: Cargo.toml
impl/src/: lib.rs  macros.rs
impl/tests/: 01-parse.rs
libs/: Cargo.toml
libs/src/: lib.rs  payload.rs  record.rs
service/: Cargo.toml
service/src/: handlers.rs  main.rs
service/src/presenter/: handlers.rs  logic.rs  mod.rs
src/: main.rs
